--- a/pages/nlp_dashboard.html
+++ b/pages/nlp_dashboard.html
@@ -1,87 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Mental Health NLP Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html class="no-js" lang="zxx">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>NLP Dashboard - Edumark</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Existing CSS -->
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../assets/css/style.css" />
+    <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="../assets/img/favicon.png"
+    />
+    <!-- Place favicon.ico in the root directory -->
 
-  <!-- NLP Dashboard CSS -->
-  <link rel="stylesheet" href="../assets/css/nlp-dashboard.css" />
-</head>
+    <!-- CSS here -->
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../assets/css/themify-icons.css" />
+    <link rel="stylesheet" href="../assets/css/nice-select.css" />
+    <link rel="stylesheet" href="../assets/css/flaticon.css" />
+    <link rel="stylesheet" href="../assets/css/gijgo.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css" />
+    <link rel="stylesheet" href="../assets/css/slicknav.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/nlp-dashboard.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+  </head>
 
-<body>
+  <body>
+    <!--[if lte IE 9]>
+      <p class="browserupgrade">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
+        your experience and security.
+      </p>
+    <![endif]-->
 
-  <!-- HEADER -->
-  <div id="header"></div>
+    <!-- header-start -->
+    <div id="header"></div>
+    <!-- header-end -->
 
-  <!-- PAGE CONTENT -->
-  <main class="nlp-page">
-    <div class="nlp-container">
-
-      <!-- LEFT -->
-      <div class="nlp-card nlp-predict">
-        <h3>Mental Health NLP Dashboard</h3>
-        <p class="subtitle">Predict text → simpan ke DB → lihat history</p>
-
-        <label>Input Text</label>
-        <textarea placeholder="Type your text..."></textarea>
-
-        <div class="btn-group">
-          <button class="btn-primary">Predict & Save</button>
-          <button class="btn-secondary">Clear</button>
-        </div>
-
-        <div class="predict-result">
-          <strong>Predicted:</strong> Depression (ID: 2)<br />
-          <strong>Record ID:</strong> 9
-        </div>
-      </div>
-
-      <!-- RIGHT -->
-      <div class="nlp-card nlp-history">
-        <div class="history-header">
-          <h3>History</h3>
-          <button class="btn-refresh">Refresh</button>
-        </div>
-
-        <table class="history-table">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Text</th>
-              <th>Pred</th>
-              <th>Time</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>9</td>
-              <td>For the past few months, I have felt deeply sad...</td>
-              <td class="label danger">Depression</td>
-              <td>1/3/2026</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
+    <!-- breadcam_area_start -->
+    <div class="bradcam_area breadcam_bg overlay2">
+      <h3>Personal Reflection</h3>
     </div>
-  </main>
+    <!-- bradcam_area_end -->
 
-  <!-- FOOTER -->
-  <div id="footer"></div>
+    <!-- nlp_dashboard_area_start -->
+    <div class="nlp_dashboard_area">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <div class="section_title text-center mb-100">
+              <h3>How's Your Day?</h3>
+              <p>Analyze mental health indicators using Natural Language Processing</p>
+            </div>
+          </div>
+        </div>
 
-  <!-- HEADER FOOTER JS -->
-  <script type="module">
-    import { Header } from "../assets/js/components/public/header.js";
-    import { Footer } from "../assets/js/components/public/footer.js";
+        <!-- Main Content -->
+        <div class="row">
+          <!-- Left Column: Prediction Form -->
+          <div class="col-xl-5 col-lg-12">
+            <div class="nlp-card nlp-predict">
+              <h4 class="card-title">Input & Prediction</h4>
+              <p class="card-subtitle">Write down your feelings today</p>
 
-    document.getElementById("header").innerHTML = Header();
-    document.getElementById("footer").innerHTML = Footer();
-  </script>
+              <div class="form-group">
+                <label for="input-text" class="form-label">Input Text</label>
+                <textarea
+                  id="input-text"
+                  class="form-control nlp-textarea"
+                  placeholder="Enter your text here..."
+                  rows="6"
+                ></textarea>
+              </div>
 
-</body>
+              <div class="button-group">
+                <button class="btn btn-predict">
+                  <i class="fa fa-flask"></i> Save
+                </button>
+                <button class="btn btn-clear">
+                  <i class="fa fa-refresh"></i> Clear
+                </button>
+              </div>
+
+              <div class="predict-result" id="predict-result" style="display: none;">
+                <div class="result-item">
+                  <span class="result-label">Predicted Category:</span>
+                  <span class="result-value" id="result-category">-</span>
+                </div>
+                <div class="result-item">
+                  <span class="result-label">Confidence:</span>
+                  <span class="result-value" id="result-confidence">-</span>
+                </div>
+                <div class="result-item">
+                  <span class="result-label">Record ID:</span>
+                  <span class="result-value" id="result-id">-</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Right Column: History Table -->
+          <div class="col-xl-7 col-lg-12">
+            <div class="nlp-card nlp-history">
+              <div class="history-header">
+                <div>
+                  <h4 class="card-title">Prediction History</h4>
+                  <p class="card-subtitle">Recent analysis results</p>
+                </div>
+                <button class="btn btn-sm btn-refresh">
+                  <i class="fa fa-refresh"></i> Refresh
+                </button>
+              </div>
+
+              <div class="table-responsive">
+                <table class="history-table">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Text Preview</th>
+                      <th>Category</th>
+                      <th>Confidence</th>
+                      <th>Date</th>
+                    </tr>
+                  </thead>
+                  <tbody id="history-tbody">
+                    <tr>
+                      <td colspan="5" class="text-center text-muted">
+                        No predictions yet. Start by analyzing some text.
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- nlp_dashboard_area_end -->
+
+    <!-- footer-start -->
+    <div id="footer"></div>
+    <!-- footer-end -->
+
+    <!-- HEADER FOOTER JS -->
+    <script type="module">
+      import { Header } from "../assets/js/components/public/header.js";
+      import { Footer } from "../assets/js/components/public/footer.js";
+
+      document.getElementById("header").innerHTML = Header();
+      document.getElementById("footer").innerHTML = Footer();
+    </script>
+
+  </body>
 </html>
